web/_includes/style.css
/* ... */
form.editing-services-interest {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
}

form.editing-services-interest button {
  margin-top: 3rem;
}

.editing .medium-card-wrapper {
  font-size: smaller;
}
.editing .medium-card-wrapper .card-header {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.editing .medium-card-wrapper .card-header h3,
.editing .medium-card-wrapper .card-header .price {
  margin: 0px;
  font-size: calc(1.1rem + .4vw);
  font-family: var(--utility-font);
  color: var(--general-night-4);
  font-variant-caps: all-small-caps;
  font-weight: var(--body-semi-bold);
  leading-trim: both;
  text-edge: cap alphabetic;
}

@media (prefers-color-scheme: dark) {
  .editing .medium-card-wrapper .card-header h3,
  .editing .medium-card-wrapper .card-header .price {
    color: var(--general-night-2);
  }
}



/* ==========================================================================
   #Books
   ========================================================================== */

section.genre p {
  grid-column: 3 / 11;
  text-align: center;
}

/* Featured book(s)
   ========================================================================== */

section.featured-book,
section.book-content {
  grid-gap: 6rem 2rem;
}

section.book-content {
  margin-top: 3.8rem;
}

section.featured-book {
  background-color: var(--manu-moon-1);
  min-height: 30em;
  margin: 0;
  padding: 3em 0;
}

.book-hero {
  grid-column: 1 / 13;
  grid-row: 1;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-gap: 1rem 2rem;
  padding: 3em 0;
  background-color: var(--rho-cancer-1);
  background-image: url(/static/images/bkg-zodiac.jpg);
  background-repeat: no-repeat;
  background-size: cover;
}

section.featured-book figure,
.book-hero figure {
  grid-column: 3 / 6;
  grid-row: 1;
  filter:drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.2));
}

section:hover.featured-book figure {
  animation: roll 4s infinite;
  animation-duration: 1.5s;
  animation-timing-function: ease-out;
  /* transform: rotate(-4deg); */
}

svg.download-icon {
  height: 1em;
  margin-left: .8rem;
}

section.featured-book .book-info,
div.featured-book-info,
.book-hero .book-info {
  grid-column: 6 / 11;
  grid-row: 1;
}

div.featured-book-info h1,
.book-info h1 {
  color: var(--manu-blood-3);
}

.book-actions {
  display: flex;
  flex-flow: row wrap;
}

.book-data {
  grid-column: 3 / 11;
  grid-row: 3;
}

.book-data a,
.book-data a:visited {
  color: var(--general-night-4);
}

.book-reviews {
  grid-column: 6 / 11;
  grid-row: 2;
}

.book-synopsis {
  grid-column: 3 / 8;
  grid-row: 1;
}

figure.book-synopsis-figure {
  grid-column: 8 / 11;
  grid-row: 1;
}

.book-reviews {
  grid-column: 6 / 11;
  grid-row: 2;
}

figure.book-reviews-figure {
  grid-column: 3 / 6;
  grid-row: 2;
}

.book-press-items {
  grid-column: 3 / 8;
  grid-row: 3;
}

figure.book-press-items-figure {
  grid-column: 8 / 11;
  grid-row: 3;
}

.book-press-items ul li {
  margin-bottom: .8rem;
}

.book-press-items ul li time {
  color: var(--general-night-3);
  font-variant-caps: all-small-caps;
  font-size: 100%;
  font-size: calc(100% + (20 - 16) * ( (100vw - 300px) / (1400 - 300)));
}

time {
  font-variant-numeric: oldstyle-nums;
}

/* .book-press-items ul li time:before {
  content: " - ";
} */

.book-reviews p {
  margin-top: 1.8em;
  margin-bottom: .8em;
}

.book-reviews em {
  margin-left: -.1em;
  color: var(--general-night-3);
}

.book-reviews p em {
  color: inherit;
}

.books-international {
  grid-column: 3 / 11;
  grid-row: 3;
  margin-top: var(--g-margin-top);
}

.book-synopsis h2,
.book-reviews h2,
.book-press-items h2 {
  margin-top: 0;
  line-height: .4;
}

@media all and (max-width: 800px) {
  section.featured-book,
  .book-hero {
    grid-gap: 1em 2em;
  }

  section.featured-book figure,
  .book-hero figure {
    grid-column: 2 / 6;
  }

  div.featured-book-info,
  .book-hero .book-info {
    grid-column: 6 / 12;
  }

  .book-synopsis,
  .book-press-items {
    grid-column: 2 / 8;
  }

  figure.book-synopsis-figure,
  figure.book-press-items-figure {
    grid-column: 8 / 12;
  }

  .book-reviews {
    grid-column: 6 / 12;
  }

  figure.book-reviews-figure {
    grid-column: 2 / 6;
  }

  .book-synopsis h2,
  .book-reviews h2,
  .book-press-items h2 {
    margin-top: 2.2rem;
  }

}

@media all and (max-width: 500px) {
  section.featured-book,
  section.book-content {
    grid-gap: 0;
  }

  section.book-content {
    margin: 2rem 1rem;
  }

  section.featured-book figure,
  .book-hero figure {
    grid-column: 1 / 13;
    /* grid-row: 2; */
    justify-self: center;
    width: 100%;
    padding: 0 1em;
  }
  .book-hero figure {
    grid-row: 1;
    width: 100%;
    padding: 0 1em;
  }

  .book-hero figure img,
  section.featured-book figure img {
    width: 100%;
  }

  div.featured-book-info,
  .book-hero .book-info,
  .featured-book-info,
  .book-info {
    grid-column: 1 / 13;
    grid-row: 2;
    padding: 0 1em 2em;
  }

  .featured-book-info {
    margin-top: 2rem;
  }

  .featured-book-info h2 {
    font-size: calc(1.5rem + 1.2vw);
  }

  .book-data,
  figure.book-synopsis-figure,
  .book-synopsis,
  figure.book-reviews-figure,
  .book-reviews,
  figure.book-press-items-figure,
  .book-press-items {
    grid-column: 1 / 13;
  }
  .book-synopsis {
    grid-row: 2;
    margin-bottom: 3rem;
  }
  figure.book-reviews-figure {
    grid-row: 3;
  }
  .book-reviews {
    grid-row: 4;
    margin-bottom: 3rem;
  }
  figure.book-press-items-figure {
    grid-row: 5;
  }
  .book-press-items {
    grid-row: 6;
  }
}

@media (prefers-color-scheme: dark) {
  section.featured-book,
  .book-hero {
    background: var(--general-night-5) !important;
  }
  section.book-content {
    margin: 0 1rem;
  }

  .featured-book-info h1,
  .featured-book-info h2,
  .book-info h1 {
    filter: brightness(1.4);
  }

  .book-data a,
  .book-data a:visited {
    color: var(--general-night-2);
  }
}
/* ... */

